--- a/infra/controllers/network/external-dns/unifi-values.yaml
+++ b/infra/controllers/network/external-dns/unifi-values.yaml
@@ -7,16 +7,11 @@ provider:
     env:
       - name: UNIFI_HOST
         value: https://192.168.1.1
-      - name: UNIFI_USER
+      - name: UNIFI_API_KEY
         valueFrom:
           secretKeyRef:
             name: unifi-credentials
-            key: username
-      - name: UNIFI_PASS
-        valueFrom:
-          secretKeyRef:
-            name: unifi-credentials
-            key: password
+            key: api-key
       - name: LOG_LEVEL
         value: debug
     livenessProbe:
