--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -81,6 +81,8 @@ spec:
               value: "on"
             - name: FIREWALL_INPUT_PORTS
               value: "8080"
+            - name: FIREWALL_OUTBOUND_SUBNETS
+              value: 10.244.0.0/16
           envFrom:
             - secretRef:
                 name: wireguard-secret
