--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -83,6 +83,8 @@ spec:
               value: "8080"
             - name: FIREWALL_OUTBOUND_SUBNETS
               value: 10.244.0.0/16
+            - name: DNS_KEEP_NAMESERVER
+              value: "on"
           envFrom:
             - secretRef:
                 name: wireguard-secret
