--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -81,10 +81,10 @@ spec:
               value: "on"
             - name: FIREWALL_INPUT_PORTS
               value: "8080"
-            - name: FIREWALL_OUTBOUND_SUBNETS
-              value: 10.244.0.0/16
-            - name: DNS_KEEP_NAMESERVER
-              value: "on"
+#            - name: FIREWALL_OUTBOUND_SUBNETS
+#              value: 10.244.0.0/16
+#            - name: DNS_KEEP_NAMESERVER
+#              value: "on"
           envFrom:
             - secretRef:
                 name: wireguard-secret
