--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -69,18 +69,22 @@ spec:
               value: protonvpn
             - name: VPN_TYPE
               value: wireguard
-            - name: SERVER_CITIES
-              value: Bratislava
-            - name: SERVER_COUNTRIES
-              value: Slovakia
-            - name: PORT_FORWARD_ONLY
-              value: 'on'
-            - name: VPN_PORT_FORWARDING
-              value: 'on'
-            - name: FIREWALL_DEBUG
-              value: "on"
-            - name: FIREWALL_INPUT_PORTS
-              value: "8080"
+#            - name: SERVER_CITIES
+#              value: Bratislava
+#            - name: SERVER_COUNTRIES
+#              value: Slovakia
+#            - name: PORT_FORWARD_ONLY
+#              value: 'on'
+#            - name: VPN_PORT_FORWARDING
+#              value: 'on'
+#            - name: FIREWALL_DEBUG
+#              value: "on"
+#            - name: FIREWALL_INPUT_PORTS
+#              value: "8080"
+#            - name: WIREGUARD_ENDPOINT_IP
+#              value: 185.245.85.130
+#            - name: WIREGUARD_ADDRESSES
+#              value: 10.2.0.2/32
 #            - name: DNS_ADDRESS
 #              value: 10.2.0.1
 #            - name: FIREWALL_OUTBOUND_SUBNETS
