Gluetun envs - enable port forward: - VPN_SERVICE_PROVIDER - VPN_TYPE - WIREGUARD_PRIVATE_KEY - WIREGUARD_PUBLIC_KEY --- - VPN_PORT_FORWARDING

--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -69,13 +69,13 @@ spec:
               value: protonvpn
             - name: VPN_TYPE
               value: wireguard
+            - name: VPN_PORT_FORWARDING
+              value: 'on'
 #            - name: SERVER_CITIES
 #              value: Bratislava
 #            - name: SERVER_COUNTRIES
 #              value: Slovakia
 #            - name: PORT_FORWARD_ONLY
-#              value: 'on'
-#            - name: VPN_PORT_FORWARDING
 #              value: 'on'
 #            - name: FIREWALL_DEBUG
 #              value: "on"
