--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -65,12 +65,16 @@ spec:
               add:
                 - NET_ADMIN
           env:
+###################### REQUIRED ######################
             - name: VPN_SERVICE_PROVIDER
               value: protonvpn
             - name: VPN_TYPE
               value: wireguard
             - name: VPN_PORT_FORWARDING
               value: 'on'
+#################### VERIFICATION ####################
+            - name: FIREWALL_INPUT_PORTS
+              value: "8080"
 #            - name: SERVER_CITIES
 #              value: Bratislava
 #            - name: SERVER_COUNTRIES
@@ -79,8 +83,6 @@ spec:
 #              value: 'on'
 #            - name: FIREWALL_DEBUG
 #              value: "on"
-#            - name: FIREWALL_INPUT_PORTS
-#              value: "8080"
 #            - name: WIREGUARD_ENDPOINT_IP
 #              value: 185.245.85.130
 #            - name: WIREGUARD_ADDRESSES
