update test deployment

--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -39,13 +39,13 @@ spec:
           envFrom:
             - secretRef:
                 name: gluetun-apikey
-          volumeMounts:
-            - mountPath: /config
-              name: config
-            - mountPath: /downloads
-              name: downloads
-            - mountPath: /vuetorrent
-              name: vuetorrent
+#          volumeMounts:
+#            - mountPath: /config
+#              name: config
+#            - mountPath: /downloads
+#              name: downloads
+#            - mountPath: /vuetorrent
+#              name: vuetorrent
       initContainers:
         - name: gluetun
           image: qmcgaw/gluetun:v3.40.0
