Gluetun envs - enable firewall debug: - VPN_SERVICE_PROVIDER - VPN_TYPE - WIREGUARD_PRIVATE_KEY - WIREGUARD_PUBLIC_KEY - VPN_PORT_FORWARDING - FIREWALL_INPUT_PORTS --- FIREWALL_DEBUG

--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -68,9 +68,11 @@ spec:
               value: wireguard
             - name: VPN_PORT_FORWARDING
               value: 'on'
-            #################### VERIFICATION ####################
             - name: FIREWALL_INPUT_PORTS
               value: "8080"
+            #################### VERIFICATION ####################
+            - name: FIREWALL_DEBUG
+              value: "on"
 
           envFrom:
             - secretRef:
