Gluetun envs - add wireguard addresses: - VPN_SERVICE_PROVIDER - VPN_TYPE - WIREGUARD_PRIVATE_KEY - WIREGUARD_PUBLIC_KEY - VPN_PORT_FORWARDING - FIREWALL_INPUT_PORTS - FIREWALL_DEBUG --- - WIREGUARD_ADDRESSES

--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -70,10 +70,11 @@ spec:
               value: 'on'
             - name: FIREWALL_INPUT_PORTS
               value: "8080"
-            #################### VERIFICATION ####################
             - name: FIREWALL_DEBUG
               value: "on"
-
+            #################### VERIFICATION ####################
+            - name: WIREGUARD_ADDRESSES
+              value: 10.2.0.2/32
           envFrom:
             - secretRef:
                 name: wireguard-secret
