--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -72,9 +72,11 @@ spec:
               value: "8080"
             - name: FIREWALL_DEBUG
               value: "on"
-            #################### VERIFICATION ####################
             - name: WIREGUARD_ADDRESSES
               value: 10.2.0.2/32
+            #################### VERIFICATION ####################
+            - name: WIREGUARD_ENDPOINT_IP
+              value: 185.245.85.130
           envFrom:
             - secretRef:
                 name: wireguard-secret
