--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -77,10 +77,11 @@ spec:
             #################### VERIFICATION ####################
             - name: WIREGUARD_ENDPOINT_IP
               value: 185.245.85.130
-            - name: WIREGUARD_ENDPOINT_PORT
-              value: "51820"
             - name: SERVER_COUNTRIES
               value: Slovakia
+            ###################### ILLEGAL #######################
+#            - name: WIREGUARD_ENDPOINT_PORT
+#              value: "51820"
           envFrom:
             - secretRef:
                 name: wireguard-secret
