Gluetun envs - add wireguard endpoint ip: - VPN_SERVICE_PROVIDER - VPN_TYPE - WIREGUARD_PRIVATE_KEY - WIREGUARD_PUBLIC_KEY - VPN_PORT_FORWARDING - FIREWALL_INPUT_PORTS - FIREWALL_DEBUG - WIREGUARD_ADDRESSES --- WIREGUARD_ENDPOINT_IP SERVER_COUNTRIES DNS_ADDRESS --- WIREGUARD_ENDPOINT_PORT

--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -79,6 +79,8 @@ spec:
               value: 185.245.85.130
             - name: SERVER_COUNTRIES
               value: Slovakia
+            - name: DNS_ADDRESS
+              value: 10.2.0.1
             ###################### ILLEGAL #######################
 #            - name: WIREGUARD_ENDPOINT_PORT
 #              value: "51820"
