--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -76,9 +76,9 @@ spec:
               value: 10.2.0.2/32
             #################### VERIFICATION ####################
             - name: WIREGUARD_ENDPOINT_IP
-              value: 185.245.85.130
+              value: 79.127.186.193
             - name: SERVER_COUNTRIES
-              value: Slovakia
+              value: Poland
             - name: DNS_ADDRESS
               value: 10.2.0.1
             ###################### ILLEGAL #######################
