use fucking transmission

--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -79,6 +79,8 @@ spec:
               value: 79.127.186.193
             - name: SERVER_COUNTRIES
               value: Poland
+            - name: DNS_KEEP_NAMESERVER
+              value: "on"
 #            - name: DNS_ADDRESS
 #              value: 10.2.0.1
             ###################### ILLEGAL #######################
