use fucking transmission

--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -81,8 +81,8 @@ spec:
               value: Poland
 #            - name: DNS_KEEP_NAMESERVER
 #              value: "on"
-#            - name: DNS_ADDRESS
-#              value: 10.2.0.1
+            - name: DNS_ADDRESS
+              value: 10.2.0.1
             ###################### ILLEGAL #######################
 #            - name: WIREGUARD_ENDPOINT_PORT
 #              value: "51820"
