--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -72,17 +72,17 @@ spec:
               value: "8080"
             - name: FIREWALL_DEBUG
               value: "on"
-            - name: WIREGUARD_ADDRESSES
-              value: 10.2.0.2/32
             #################### VERIFICATION ####################
             - name: WIREGUARD_ENDPOINT_IP
-              value: 79.127.186.193
+              value: 185.245.85.130
             - name: SERVER_COUNTRIES
-              value: Poland
+              value: Slovakia
+#            - name: WIREGUARD_ADDRESSES
+#              value: 10.2.0.2/32
 #            - name: DNS_KEEP_NAMESERVER
 #              value: "on"
-            - name: DNS_ADDRESS
-              value: 10.2.0.1
+#            - name: DNS_ADDRESS
+#              value: 10.2.0.1
             ###################### ILLEGAL #######################
 #            - name: WIREGUARD_ENDPOINT_PORT
 #              value: "51820"
