--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -22,7 +22,8 @@ spec:
           image: lscr.io/linuxserver/transmission:4.0.6-r2-ls282
           ports:
             - name: qbittorrent-web
-              containerPort: 8080
+#              containerPort: 8080
+              containerPort: 9091
           env:
             - name: TZ
               value: Europe/Warsaw
@@ -81,10 +82,12 @@ spec:
               value: protonvpn
             - name: WIREGUARD_ADDRESSES
               value: 10.2.0.2/32
-#            - name: DNS_KEEP_NAMESERVER
-#              value: "on"
-            - name: DNS_ADDRESS
-              value: 10.2.0.1
+            - name: DNS_KEEP_NAMESERVER
+              value: "on"
+            - name: FIREWALL_OUTBOUND_SUBNETS
+              value: 10.244.0.0/16
+#            - name: DNS_ADDRESS
+#              value: 10.2.0.1
             ###################### ILLEGAL #######################
 #            - name: WIREGUARD_ENDPOINT_PORT
 #              value: "51820"
