--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -82,12 +82,14 @@ spec:
 #              value: protonvpn
             - name: WIREGUARD_ADDRESSES
               value: 10.2.0.2/32
-#            - name: DNS_KEEP_NAMESERVER
+#            - name: DNS_KEEP_NAMESERVER -- this shit kills forwarding probs
 #              value: "on"
             - name: FIREWALL_OUTBOUND_SUBNETS
-              value: 10.244.0.0/16
+              value: 10.244.0.0/16,10.96.0.0/12
 #            - name: DNS_ADDRESS
 #              value: 10.2.0.1
+            - name: DOT
+              value: "off"
             ###################### ILLEGAL #######################
 #            - name: WIREGUARD_ENDPOINT_PORT
 #              value: "51820"
