--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -84,12 +84,12 @@ spec:
             #################### VERIFICATION ####################
             - name: DOT
               value: "off"
+            - name: DNS_ADDRESS
+              value: 10.2.0.1
 #            - name: VPN_PORT_FORWARDING_PROVIDER
 #              value: protonvpn
 #            - name: DNS_KEEP_NAMESERVER -- this shit kills forwarding probs
 #              value: "on"
-#            - name: DNS_ADDRESS
-#              value: 10.2.0.1
             ###################### ILLEGAL #######################
 #            - name: WIREGUARD_ENDPOINT_PORT
 #              value: "51820"
