--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -89,10 +89,10 @@ spec:
               value: 'on'
 #            - name: SERVER_COUNTRIES
 #              value: Slovakia
-#            - name: WIREGUARD_ENDPOINT_IP
-#              value: 185.245.85.130
-#            - name: WIREGUARD_ADDRESSES
-#              value: 10.2.0.2/32
+            - name: WIREGUARD_ENDPOINT_IP
+              value: 146.70.161.162
+            - name: WIREGUARD_ADDRESSES
+              value: 10.2.0.2/32
           envFrom:
             - secretRef:
                 name: wireguard-secret
