--- a/apps/arr/qbittorrent/service.yaml
+++ b/apps/arr/qbittorrent/service.yaml
@@ -14,3 +14,24 @@ spec:
   selector:
     app.kubernetes.io/name: qbittorrent
     app: qbittorrent
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: qbittorrent-torrent
+  namespace: arr
+  labels:
+    app.kubernetes.io/name: qbittorrent
+    app: qbittorrent
+  annotations:
+    io.cilium/lb-ipam-ips: 192.168.8.244
+spec:
+  ports:
+    - port: 18863
+      protocol: TCP
+      targetPort: qbittorrent-torrent
+      name: qbittorrent-torrent
+  selector:
+    app.kubernetes.io/name: qbittorrent
+    app: qbittorrent
+  type: LoadBalancer
