--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: qbittorrent
+  name: qbittorrent-test
   namespace: arr
 spec:
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      app.kubernetes.io/name: qbittorrent
-      app: qbittorrent
+      app.kubernetes.io/name: qbittorrent-test
+      app: qbittorrent-test
   replicas: 1
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: qbittorrent
-        app: qbittorrent
+        app.kubernetes.io/name: qbittorrent-test
+        app: qbittorrent-test
     spec:
       containers:
         - name: python
