--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -31,7 +31,7 @@ spec:
             - -c
             - |
               apt-get update && \
-              apt-get install -y nano zsh && \
+              apt-get install -y nano zsh transmission transmission-daemon && \
               sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
               tail -f /dev/null
       initContainers:
