--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -82,9 +82,9 @@ spec:
             - name: FIREWALL_DEBUG
               value: 'on'
             - name: SERVER_COUNTRIES
-              value: Poland
+              value: Slovakia
             - name: WIREGUARD_ENDPOINT_IP
-              value: 146.70.161.162
+              value: 138.199.34.193
             - name: WIREGUARD_ADDRESSES
               value: 10.2.0.2/32
           envFrom:
