--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -81,8 +81,8 @@ spec:
               value: 10.244.0.0/16,10.96.0.0/12
             - name: FIREWALL_DEBUG
               value: 'on'
-#            - name: SERVER_COUNTRIES
-#              value: Slovakia
+            - name: SERVER_COUNTRIES
+              value: Slovakia
             - name: WIREGUARD_ENDPOINT_IP
               value: 138.199.34.193
             - name: WIREGUARD_ADDRESSES
@@ -96,10 +96,16 @@ spec:
             - name: gluetun-auth
               mountPath: /gluetun/auth/config-template.toml
               subPath: config-template.toml
+            - name: gluetun-servers
+              mountPath: /gluetun/servers.json
+              subPath: servers.json
       volumes:
         - name: gluetun-auth
           configMap:
             name: gluetun-auth
+        - name: gluetun-servers
+          configMap:
+            name: gluetun-servers
         - name: dnsdist
           configMap:
             name: dnsdist
