--- a/apps/arr/qbittorrent/kustomization.yaml
+++ b/apps/arr/qbittorrent/kustomization.yaml
@@ -23,6 +23,10 @@ configMapGenerator:
     namespace: arr
     files:
       - config-template.toml=config/gluetun-auth.toml
+  - name: gluetun-servers
+    namespace: arr
+    files:
+      - servers.json=config/servers.json
   - name: dnsdist
     namespace: arr
     files:
