--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -52,10 +52,12 @@ spec:
                   - /bin/sh
                   - -c
                   - |
-                    cp /gluetun/auth/config-template.toml /gluetun/auth/config.toml;
-                    sed -i "s|__API_KEY__|${GSP_GTN_API_KEY}|g" /gluetun/auth/config.toml;
-                    (ip rule del table 51820; ip -6 rule del table 51820) || true;
-                    ./gluetun-entrypoint update -enduser -providers protonvpn;
+                    cp /gluetun/auth/config-template.toml /gluetun/auth/config.toml &&
+                    sed -i "s|__API_KEY__|${GSP_GTN_API_KEY}|g" /gluetun/auth/config.toml &&
+                    (ip rule del table 51820; ip -6 rule del table 51820) || true &&
+                    touch /gluetun/a &&
+                    ./gluetun-entrypoint update -enduser -providers protonvpn > /gluetun/log 2>&1 &&
+                    touch /gluetun/b &&
                     exec "$@"
           securityContext:
             capabilities:
