--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -55,13 +55,15 @@ spec:
                     cp /gluetun/auth/config-template.toml /gluetun/auth/config.toml;
                     sed -i "s|__API_KEY__|${GSP_GTN_API_KEY}|g" /gluetun/auth/config.toml;
                     (ip rule del table 51820; ip -6 rule del table 51820) || true;
-                    ./gluetun-entrypoint update -enduser -providers protonvpn > /gluetun/log;
+#                    ./gluetun-entrypoint update -enduser -providers protonvpn > /gluetun/log;
 #                    exec "$@"
           securityContext:
             capabilities:
               add:
                 - NET_ADMIN
           env:
+            - name: UPDATER_PERIOD
+              value: 24h
             ###################### REQUIRED ######################
             - name: DOT
               value: "off"
